6.4: manager send message, close chat & e2e tests
