# api/manager.events.swagger.yml
@@ -31,11 +31,13 @@ components:
       oneOf:
         - $ref: "#/components/schemas/NewChatEvent"
         - $ref: "#/components/schemas/NewMessageEvent"
+        - $ref: "#/components/schemas/ChatClosedEvent"
       discriminator:
         propertyName: eventType
         mapping:
           NewChatEvent: "#/components/schemas/NewChatEvent"
           NewMessageEvent: "#/components/schemas/NewMessageEvent"
+          ChatClosedEvent: "#/components/schemas/ChatClosedEvent"
 
     BaseEvent:
       type: object
@@ -106,3 +108,18 @@ components:
             createdAt:
               type: string
               format: "date-time"
+
+    ChatClosedEvent:
+      allOf:
+        - $ref: "#/components/schemas/BaseEvent"
+        - type: object
+          required: [ canTakeMoreProblems, chatId ]
+          properties:
+            chatId:
+              type: string
+              format: uuid
+              x-go-type: types.ChatID
+              x-go-type-import:
+                path: "github.com/karasunokami/chat-service/internal/types"
+            canTakeMoreProblems:
+              type: boolean
