# internal/repositories/chats/api.go
@@ -2,12 +2,16 @@ package chatsrepo
 
 import (
 	"context"
+	"errors"
 	"fmt"
 
+	"github.com/karasunokami/chat-service/internal/store"
 	"github.com/karasunokami/chat-service/internal/store/chat"
 	"github.com/karasunokami/chat-service/internal/store/problem"
 	"github.com/karasunokami/chat-service/internal/types"
 )
+
+var ErrNotFound = errors.New("Chat not found")
 
 func (r *Repo) CreateIfNotExists(ctx context.Context, userID types.UserID) (types.ChatID, error) {
 	chatID, err := r.db.Chat(ctx).Create().
@@ -33,4 +37,20 @@ func (r *Repo) GetManagerOpened(ctx context.Context, managerID types.UserID) ([]
 	}
 
 	return storeChatsToRepoChats(chats), nil
+}
+
+func (r *Repo) GetClientID(ctx context.Context, chatID types.ChatID) (types.UserID, error) {
+	c, err := r.db.Chat(ctx).Query().
+		Where(chat.IDEQ(chatID)).
+		Select(chat.FieldClientID).
+		First(ctx)
+	if err != nil {
+		if store.IsNotFound(err) {
+			return types.UserIDNil, ErrNotFound
+		}
+
+		return types.UserIDNil, fmt.Errorf("fetch manager id by problem id, err=%v", err)
+	}
+
+	return c.ClientID, nil
 }
